--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "jsonwebtoken": "^8.5.1",
     "radium": "^0.26.1",
     "react": "^17.0.1",
     "react-animations": "^1.0.0",
